--- a/actualizaciones-david/server.cfg
+++ b/actualizaciones-david/server.cfg
@@ -1,9 +1,9 @@
 echo Executing Server Config...
 lanmode 0
 rcon_password rcpass9856732lds
-maxplayers 200
-port 8888
-hostname SA-MP 0.3 Server
+maxplayers 20
+port 7777
+hostname Server prueba
 gamemode0 grandlarc 1
 filterscripts gl_actions gl_realtime gl_property gl_mapicon ls_elevator attachments skinchanger vspawner ls_mall ls_beachside
 announce 0
